--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title>web code python</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="Python Online" content="Một trang web hỗ trợ các bạn có thể code Pyhton ở bất kì thiết bị nào ^^">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
