--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title>web code python</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="Python Online" content="Một trang web hỗ trợ các bạn có thể code Pyhton ở bất kì thiết bị nào ^^">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -28,29 +29,44 @@
             <ul>
               <li>Web được code để phục vụ các bạn trong trường hợp không có máy tính để code hoặc có máy tính nhưng gặp vấn đề khi cài Python vào máy</li>
               <li>Web được code khá vội nên sẽ thường xuyên bị sập, web sẽ tự động khởi động lại sau khi sập</li>
-              <li>Server của web đặt tại Singapore,, và đang chạy trên 1 VPS khá yếu, có thể sẽ mất nhiều thời gian để truy cập và chạy code </li>
+              <li>Server của web đặt tại Mỹ nma là Mỹ tho và đang chạy trên 1 host khá yếu, có thể sẽ mất nhiều thời gian để truy cập và chạy code </li>
+              <li>Web có hỗ trợ đọc từ file, các ô nhập giá trị có thể bỏ trống nếu đọc dữ liệu từ bàn phím và màn hình hoặc bạn không biết nó dùng để làm gì </li>
+              <li>Nếu bạn cảm thấy có gì đó sai sai trong cái web, hãy thử bấm vào nút màu đó ở đây ----> <a name="" id="" class="btn btn-danger" href="#" role="button" onclick="fixFunc()">Fix</a></li>
             </ul>
           </p>
         </div>
       </div><br>
+
       <div class="card text-left">
         <div class="card-body">
-          <h4 class="card-title">Chố để code</h4>
+          <h4 class="card-title">Chỗ để code</h4>
           <p class="card-text">
             <ul>
               <li>
                 <div class="form-group">
                   <label for="">Chỗ này để code nè</label>
+                  <P></P>
                   <div id="editor" style="height:400px;border:1px solid black;">
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.20.0/min/vs/loader.min.js"></script>
         
                   </div>
                 </div>
+                <a name="" id="tab-button" class="btn btn-warning" href="#" role="button">Tab</a>
+                <!-- <a name="" id="copy-button" class="btn btn-danger" href="#" role="button">Copy</a>
+                <a name="" id="paste-button" class="btn btn-success" href="#" role="button">Paste</a> -->
               </li>
               <li>
                 <div class="form-group">
                   <label for="">Chỗ này để nhập input nè</label>
-                  <textarea class="form-control" name="" id="input" rows="3"></textarea>
+                  <input type="text" name="" id="input-from" class="form-control" placeholder="Nhập tên file cần đọc, để trống nếu bạn lấy giữ liệu từ bàn phím" aria-describedby="helpId">
+                  <br>
+                  <textarea class="form-control" name="" id="input" rows="3" placeholder="Nhập giá trị của input"></textarea>
+                </div>
+              </li>
+              <li>
+                <div class="form-group">
+                  <label for="">Chỗ này để nhập output nè</label>
+                  <input type="text" name="" id="output-from" class="form-control" placeholder="Nhập tên file cần đọc, để trống nếu bạn lấy giữ liệu từ màn hình" aria-describedby="helpId">
                 </div>
               </li>
               <li>
@@ -60,6 +76,16 @@
                 </div>
               </li>
             </ul>
+          </p>
+        </div>
+      </div>
+      <br>
+      <div class="card text-left" hidden id="Output-card">
+        <div class="card-body">
+          <h4 class="card-title">Output gần nhất</h4>
+          <p class="card-text">
+            <ul><strong>Trạng thái: </strong><p id="output-status"></p></ul>
+            <ul><strong>Output: </strong><p id="output-console"></p></ul>
           </p>
         </div>
       </div>
@@ -78,15 +104,17 @@
       let editor = monaco.editor.create(document.getElementById('editor'), {
         value: `#code tai day`,
         language: 'python',
-        theme: 'vs'
+        theme: 'vs',
+        automaticLayout: true
       });
 
-      let runn = document.getElementById("run")
-      runn.addEventListener("click", function (e) {
-        e.preventDefault()
+      function codeRunFunc() {
         let codecontent = editor.getValue()
         let inputvalue = document.getElementById("input").value
+        let inputfrom = document.getElementById("input-from").value || "console"
+        let outputfrom = document.getElementById("output-from").value || "console"
         if(!codecontent || codecontent == "#code tai day") return alert("Bạn chưa nhập nội dung code ") 
+        console.log(inputfrom)
         if (confirm("Bạn có chắc chắn muốn chạy code?")) {
 
           //logic tien hanh gui code ve server
@@ -96,23 +124,65 @@
             .post('/api/coderun')
             .send({
               code:codecontent,
-              input:inputvalue
+              input:inputvalue,
+              inputfrom,outputfrom
             }) 
             .end((err, res) => {
+              document.getElementById("Output-card").removeAttribute("hidden"); 
               let rs = res.body
+              console.log(res)
+              document.getElementById("output-status").innerHTML=rs.status
               if(rs.err_value){
+                document.getElementById("output-console").innerHTML= rs.err_value
                 alert("========Kết quả========\nTrạng thái:"+rs.status+"\nKết quả:"+  rs.err_value +"\nID:"+rs.runID+"\nHãy kiểm tra lại cú pháp của bạn nha ^^")
               }else{
+                document.getElementById("output-console").innerHTML= rs.return_value
                 alert("========Kết quả========\nTrạng thái:"+rs.status+"\nKết quả:"+  rs.return_value +"\nID:"+rs.runID)
               }
              
-
+             
             });
 
         } else return
+      }
+      let runn = document.getElementById("run")
+      runn.addEventListener("click", function (e) {
+        e.preventDefault()
+        codeRunFunc()
 
       });
+
+      document.getElementById("tab-button").addEventListener("click", function (e) {
+        
+        let old_code = editor.getValue()
+        editor.setValue(editor.getValue()+"    ")
+        e.preventDefault()
+      });
+      // document.getElementById("copy-button").addEventListener("click", function (e) {
+      //   e.preventDefault()
+      //   navigator.clipboard.writeText(editor.getValue());
+      //   alert("Copy thành công");
+      // });
+      // document.getElementById("paste-button").addEventListener("click", function (e) {
+      //   e.preventDefault()
+      //   editor.setValue(navigator.clipboard.readText())
+      // });
+
+
+
+      $(document).keydown(function (event) {
+        event.preventDefault()
+         if (event.ctrlKey && event.keyCode == 83) {
+          //Ctrl+S Function
+          codeRunFunc()
+        }
     })
+    function fixFunc() {
+      for (var it in $.cookie()) $.removeCookie(it);
+      window.localStorage.clear()
+      location.reload();
+    }
+  })
 
 
   </script>
